2002-09-08  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/toolbox.c (sp_maintoolbox_create): Construct main window by hand

	* src/interface.c (sp_ui_main_menu): New method

	* src/help.c (sp_help_about): Use document width and height

	* src/svg-view.c (sp_svg_view_rescale): Use pixel coords
	(sp_svg_view_widget_size_request): Ditto

	* src/spiral-context.c (sp_spiral_context_config_widget): Implement
	(sp_spiral_context_setup): Ditto
	(sp_spiral_context_set): Ditto

	* src/star-context.c (sp_star_context_config_widget): Implement

	* src/desktop.c (sp_desktop_new): Use repr key for initial select context

	* src/select-context.c (sp_select_context_config_widget): Implement
	(sp_select_context_transform_toggled): Helper
	(sp_select_context_show_toggled): Ditto

	* src/display/nr-arena-shape.c (nr_arena_shape_update): Do not stroke,
	if width < 0.125

	* src/display/nr-arena-glyphs.c (nr_arena_glyphs_group_update): Use paintbox
	(nr_arena_glyphs_group_set_paintbox): New method
	(nr_arena_glyphs_update): Do not stroke if width < 0.125
	(nr_arena_glyphs_render): Do not render here
	(nr_arena_glyphs_fill_mask): New helper
	(nr_arena_glyphs_stroke_mask): Ditto
	(nr_arena_glyphs_group_update): Create painters here
	(nr_arena_glyphs_group_render): Render here

	* src/dialogs/tool-attributes.c (sp_tool_attributes_dialog_setup): Added
	SPSelectContext

	* src/dialogs/stroke-style.c (sp_stroke_style_paint_update): Use new gradient
	position widget logic
	(sp_stroke_style_paint_dragged): Ditto
	(sp_stroke_style_paint_changed): Ditto

	* src/dialogs/fill-style.c (sp_fill_style_widget_update): Use new gradient
	position widget logic
	(sp_fill_style_widget_paint_dragged): Ditto
	(sp_fill_style_widget_paint_changed): Ditto

	* src/sp-shape.c (sp_shape_show): Calculate and set paintbox
	(sp_shape_modified): Ditto

	* src/sp-gradient.c (sp_lineargradient_from_position): New method
	(sp_lineargradient_to_position): Ditto
