@@ -14,6 +14,7 @@ noinst_LIBRARIES = libspsvg.a
 
 libspsvg_a_SOURCES = \
 	svg.h \
+	svg-types.h \
 	svg-length.c \
 	svg-color.c svg-color.h \
 	svg-affine.c \
