@@ -1,5 +1,9 @@
 2002-09-08  Lauris Kaplinski  <lauris@kaplinski.com>
 
+	* src/dialogs/export.c (sp_export_do_export): Fixed affine
+
+	* src/main.c (sp_main_console): Fixed affine
+
 	* src/toolbox.c (sp_maintoolbox_create): Construct main window by hand
 
 	* src/interface.c (sp_ui_main_menu): New method
